beedzo.css
:root {
  --primaryColor: #0055ff;
  --shadowColor: #00fff9;
}

h1 {
	margin: 0px;
	padding: 0px;
}

.header {
  position: static;
  right: 0;
  bottom: 0;
  left: 0;
  top: 0;
  height: 10%;
  vertical-align: text-top;
  margin: 0px;
  padding: 0px;
  background-color: black;
  text-align: center;
  border-bottom: 2px solid lightslategrey;
}

.sidebar {
  position: absolute;
  background-color: black;
  border-right: 2px solid transparent;
  width: 0%;
  height: 90%;
  transition: 0.5s;
  overflow-x: hidden;
  z-index: 10;
}

.sidebarItems {
  position: relative;
  text-align: center;
  transition: 0.5s;
}

.sidebarItems a {
  color: white;
  text-decoration: none;
  display: block;
  padding-bottom: 5%;
}

.sidebarItems a:hover {
  background-color: white;
  color: black;
}

.mainContent {
  height: 100%;
  width: 100%;
  position: relative;
}

.shadow {
	font-size: 8vh;
	text-shadow: 1px 1px var(--shadowColor), 
                2px 2px var(--shadowColor), 
                3px 3px var(--shadowColor), 
                4px 4px var(--shadowColor), 
                5px 5px var(--shadowColor), 
                6px 6px var(--shadowColor);
	color: var(--primaryColor);
	transition: 0.5s;
}

.buttonContainer {
  position: absolute;
}

html, body {
  margin:0;
  padding:0;
  height:100%;
  width:100%;
	color: white;
  background-color:	black;
  overflow: hidden;
}

#toplinks {
  border: 10px;
  border-color: red;
  height: 6%;
}

#menuButton {
  position: relative;
  font-size: 200%;
  width: 50px;
  height: 50px;
  cursor: pointer;
  transition: 0.3s;
  padding-left: 5px;
  z-index: 10;
}


#closebutt {
  position: absolute;
  cursor: pointer;
  justify-content: right;
  right: 12px;
  top: -8px;
  font-family: sans-serif;
  font-size: 20px;
}

#closebutt:hover {
  background-color: lightslategray;
}

#WelcomePage {
  position: absolute;
  z-index: 8;
  height: 100%;
  width: 100%;
  display: flex;
  text-align: center;
  align-content: center;
  align-items: center;
  justify-content: center;
  opacity: 1;
  transition: 0.8s;
  background-color: transparent;
}

.bgImg {
  width: 100%;
  height: 100%;
  position: absolute;
  z-index: 0;
  filter: blur(2px);
  object-fit: cover;
}

#WelcomeContent {
  position: relative;
  z-index: 1;
  background: rgba(0, 0, 0, 0.5);
  min-height: 100%;
  min-width: 100%;
}

#WelcomeText {
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}

#AboutPage {
  position: absolute;
  z-index: 7;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: 0.8s;
}

#ProjPage {
  position: relative;
  z-index: 9;
  height: 100%;
  width: 100%;
  opacity: 0;
  transition: 0.8s;
}

.blur {
  position: absolute;
  z-index: 7;
  height: 100%;
  width: 100%;
  transition: 0.8s;
  background-image: url("green_gridTile.png");
  background-repeat: round;
  filter: blur(1px);
}

.PageTitle {
  text-align: center;
  position: absolute;
  width: 100%;
  height: 10%;
  z-index: 8;
}

.ProjPanel {
  position: absolute;
  width: 100%;
  height: 30%;
  text-align: center;
  vertical-align: center;
  justify-content: center;
  z-index: 10;
}

.ProjContainer {
  width: 80%;
  height: 100%;
  padding-left: 10%;
  transition: 0.2s;
  opacity: 0;
  visibility: hidden;
  overflow-y: hidden;
}

.ProjChild {
  width: 50%;
  height: 100%;
  float: left;
  overflow-y: auto;
}

.ProjPic {
  width: 50%;
  height: 100%;
  float: left;
  overflow-y: hidden;
  align-items: center;
  margin: auto;
  display: flex;
  justify-content: center;
}

.ProjPic:hover .ProjBgImg {
  filter: blur(2px);
}

.ProjPic:hover .ProjLink {
  opacity: 1;
}

.ProjBgImg {
  width: 100%;
  height: 100%;
  object-fit: cover;
  backface-visibility: hidden;
}

.ProjLink {
  position: absolute;
  z-index: 5;
  text-align: center;
  background-color: green;
  opacity: 0;
  text-decoration: none;
  color: white;
  padding: 2%;
  font-family: sans-serif;
}

.ProjScroller {
  margin: 0 auto;
  overflow-x: auto;
  overflow-y: hidden;
  white-space: nowrap;
  width: 80%;
  height: 100%;
  background-color: black;
}

.ScrollItem {
  height: 100%;
  width: auto;
  display: inline-block;
  cursor: pointer;
  white-space: normal;
}

.ScrollItem:hover {
  opacity: 0.8;
}

#WheelContainer {
  height: 0%;
}

#WingContainer {
  height:0%;
}

#CretContainer {
  height:0%;
}

